# WS2812-Led-control-ESP32-C6

./: .gitignore  Cargo.toml  README.md  espflash.toml  espflash_ports.toml  partitions.csv
.cargo/: config.toml
src/: main.rs
