[package]
name = "ws2812-led-control"
version = "0.1.0"
authors = ["klassenserver7b <klassenserver7bwin10@gmail.com>"]
edition = "2021"

[[bin]]
name = "ws2812-led-control"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
lto = "fat"

[profile.dev]
debug = false   # Symbols are nice and they don't increase the size on Flash
split-debuginfo = "unpacked"
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = "0.52.1"
esp-idf-hal = { version = "0.46.2"}
embedded-svc = "0.29.0"
anyhow = "1.0.98"
log = "0.4.27"

[build-dependencies]
embuild = "0.33"
